gateway-api/moreTrafficWebsiteDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-more-traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-more-traffic
  template:
    metadata:
      labels:
        app: website-more-traffic
    spec:
      containers:
      - name: website
        image: delsynn/website:1.7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
