gateway-api/lessTrafficWebsiteService.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-less-traffic
spec:
  selector:
    app: website-less-traffic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
