gateway-api/moreTrafficWebsiteService.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-more-traffic
spec:
  selector:
    app: website-more-traffic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
