gateway-api/whoamiHttproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: default
spec:
  parentRefs:
    - name: whoami-gateway
  hostnames:
    - "whoami.47.cc.ucll.cloud"  # Replace with your domain
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
